@@ -1,4 +1,4 @@
-	$Id: README.x2sys,v 1.4 2007-01-31 17:00:03 pwessel Exp $
+	$Id: README.x2sys,v 1.5 2008-09-21 00:30:06 guru Exp $
 
 README file for GMT supplemental x2sys programs
 Distributed under the GNU Public License (see file ../COPYING)
@@ -6,6 +6,13 @@ Distributed under the GNU Public License (see file ../COPYING)
 AUTHOR:		Paul Wessel
 DATE:		15-JUN-2004
 INSTALL INFO:	The x2sys directory should install under GMT/src
+
+1.2 UPDATE [20-SEPT-2008]
+
+Added x2sys_list.c which replaces the purpose of old x_list and
+x2sys_solve.c which replaces x_solve_dc_drift.c.  These are
+experimental and should not be relied upon; syntax and use may
+change without notice!
 
 1.1 UPDATE
 Added x2sys_binlist.c which replicates the purpose of the old gmt2bin.c
